@@ -1,4 +1,1 @@
-# MD5 checksums generated by MD5summer (http://www.md5summer.org)
-# Generated 10.1.2012 12:11:00
-
-bcad092a23462f8c154e605ad428329a *addons.xml
+1d9f18df820d7c4f769fdd342ace469c
